Resolve spacing issues
Spacing issues were resolved.

--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,6 @@ html {
   font-family: sans-serif;
 }
 
-
 .polaroid {
   margin: 0;
   padding: 10px;
@@ -31,7 +30,7 @@ html {
 
 .polaroid:first-child {
   left: 20%;
-  top: 100px;
+  top: 105px;
   z-index: 1;
   transform: rotate(-20deg);
 }
@@ -53,5 +52,5 @@ html {
 .polaroid:hover {
   transform: rotate(0);
   z-index: 1000;
-  box-shadow: 4px 7px 8px rgba(0, 0, 0, .5)
+  box-shadow: 4px 7px 8px rgba(0, 0, 0, .5);
 }
